<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FilterFragment">

    <View
        android:id="@+id/selector"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/selector" />


    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selector"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Select camera"
        android:textColor="@color/black"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/okey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selector"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="OK"
        android:textColor="@color/appcent_theme"
        android:textSize="17sp" />


    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectText"
        android:layout_margin="10dp"
        android:checkedButton="@+id/radio_button_1">

        <RadioButton
            android:id="@+id/radio_button_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:checked="true"
            android:text="@string/c0" />

        <RadioButton
            android:id="@+id/radio_button_1"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c1" />

        <RadioButton
            android:id="@+id/radio_button_2"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c2" />

        <RadioButton
            android:id="@+id/radio_button_3"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c3" />

        <RadioButton
            android:id="@+id/radio_button_4"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c4" />

        <RadioButton
            android:id="@+id/radio_button_5"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c5" />

        <RadioButton
            android:id="@+id/radio_button_6"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c6" />

        <RadioButton
            android:id="@+id/radio_button_7"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c7" />

        <RadioButton
            android:id="@+id/radio_button_8"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c8" />


        <RadioButton
            android:id="@+id/radio_button_9"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c9" />

        <RadioButton
            android:id="@+id/radio_button_10"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appcent_theme"
            android:text="@string/c10" />

    </RadioGroup>


</RelativeLayout>